added google verification

--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
+    <meta
+      name="google-site-verification"
+      content="AI1lefhJUODPgc1U4HftnSnJ_wjVBKMcYsfFlwHsAjk" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CreativeCraft.AI</title>
   </head>
