--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.png" />
+    <link rel="icon" type="image/svg+xml" href="/logo.webp" />
     <meta
       name="google-site-verification"
       content="AI1lefhJUODPgc1U4HftnSnJ_wjVBKMcYsfFlwHsAjk" />
