add meta tag and sitemap

--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,17 @@
       name="google-site-verification"
       content="AI1lefhJUODPgc1U4HftnSnJ_wjVBKMcYsfFlwHsAjk" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="CreativeCraft AI is an all-in-one AI platform to generate articles, blog titles, images, remove backgrounds, remove objects, review resumes, and explore community creations." />
+    <meta
+      name="keywords"
+      content="AI article writer, AI blog generator, AI image generator, background remover, object remover, AI resume review, AI tools platform" />
+
+    <meta name="author" content="CreativeCraft AI" />
+
+    <meta name="robots" content="index, follow" />
+
     <title>CreativeCraft.AI</title>
   </head>
   <body>
